--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="xUL-hi-Vaw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Qe4-4s-UEE">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -360,12 +360,12 @@
                         <outlet property="nameField" destination="1t6-SR-bJq" id="KoN-5p-ndd"/>
                         <outlet property="saveButton" destination="WOm-3h-qW0" id="hu0-Eb-ReD"/>
                         <outlet property="zipField" destination="jui-uf-3g3" id="yX0-ec-jaO"/>
-                        <segue destination="xUL-hi-Vaw" kind="push" identifier="go to terms" id="uUG-6A-CrA"/>
+                        <segue destination="721-hy-SPE" kind="push" identifier="go to terms" id="D7o-TK-Kff"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e3v-jh-alh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="500" y="-801"/>
+            <point key="canvasLocation" x="517" y="-801"/>
         </scene>
         <!--Terms And Agreements View Controller - Congrats !-->
         <scene sceneID="dsM-be-Uzr">
@@ -426,7 +426,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tIX-BK-8eR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1459" y="-798"/>
+            <point key="canvasLocation" x="933" y="-798"/>
         </scene>
         <!--Find Crew View Controller - Stowaway-->
         <scene sceneID="k71-rh-kI6">
@@ -523,26 +523,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="1869" y="-801"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="bFM-Pe-beJ">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="xUL-hi-Vaw" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" id="NZQ-KF-zxS"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6tX-RM-lSs">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="721-hy-SPE" kind="relationship" relationship="rootViewController" id="LCe-am-Aux"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="a5G-Et-uMP" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="933" y="-798"/>
+            <point key="canvasLocation" x="1343" y="-801"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
