--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -428,10 +428,10 @@
             </objects>
             <point key="canvasLocation" x="933" y="-798"/>
         </scene>
-        <!--Find Crew View Controller - Stowaway-->
+        <!--Enter Pickup Drop Off View Controller - Stowaway-->
         <scene sceneID="k71-rh-kI6">
             <objects>
-                <viewController id="gzB-dY-rge" customClass="FindCrewViewController" sceneMemberID="viewController">
+                <viewController id="gzB-dY-rge" customClass="EnterPickupDropOffViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="IqP-mX-llD"/>
                         <viewControllerLayoutGuide type="bottom" id="1ps-7k-reJ"/>
@@ -479,7 +479,7 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="144" y="333" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="DF2B95B0-BDE4-45B3-97CC-72FEA930DFE6" colorSpace="pattern"/>
+                                <color key="color" patternImage="3616469E-AECF-49ED-A33E-3795C3374483" colorSpace="pattern"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -532,10 +532,10 @@
             </objects>
             <point key="canvasLocation" x="1869" y="-801"/>
         </scene>
-        <!--View Controller-->
+        <!--Finding Crew View Controller-->
         <scene sceneID="3uT-tg-mP0">
             <objects>
-                <viewController id="ddu-Zc-dJg" sceneMemberID="viewController">
+                <viewController id="ddu-Zc-dJg" customClass="FindingCrewViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="iCa-oa-ZQs"/>
                         <viewControllerLayoutGuide type="bottom" id="iC9-AK-KYH"/>
@@ -592,6 +592,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="countDownTimer" destination="8cj-Ob-NP1" id="mGw-8H-AJH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XCa-ol-41Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -618,7 +621,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="DF2B95B0-BDE4-45B3-97CC-72FEA930DFE6" width="320" height="460">
+        <image name="3616469E-AECF-49ED-A33E-3795C3374483" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
