--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -479,7 +479,7 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="144" y="333" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="B54B28B1-7E0E-404C-8CC3-228262974BD4" colorSpace="pattern"/>
+                                <color key="color" patternImage="A3991BFF-5119-4F51-B6C7-C7D5D86D15F8" colorSpace="pattern"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -598,6 +598,9 @@
                     <connections>
                         <outlet property="cancelButton" destination="Nvp-gI-qSz" id="hoo-PI-2Wn"/>
                         <outlet property="countDownTimer" destination="8cj-Ob-NP1" id="mGw-8H-AJH"/>
+                        <outlet property="imageView1" destination="E5Q-KQ-FCT" id="a0B-vE-6ss"/>
+                        <outlet property="imageView2" destination="RHS-wu-hGz" id="PM1-cn-wg7"/>
+                        <outlet property="imageView3" destination="hMD-iY-ToN" id="qBX-cW-V3Z"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XCa-ol-41Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -625,7 +628,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="B54B28B1-7E0E-404C-8CC3-228262974BD4" width="320" height="460">
+        <image name="A3991BFF-5119-4F51-B6C7-C7D5D86D15F8" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
