--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="yyB-R0-4Pt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Qe4-4s-UEE">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -155,28 +155,18 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ja2-5M-48S">
-                                <rect key="frame" x="95" y="370" width="113" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ja2-5M-48S">
+                                <rect key="frame" x="104" y="404" width="113" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Got It...aye aye !">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Gqh-qZ-Ggc" kind="push" identifier="go to payment" id="Sys-CD-7Ga"/>
+                                    <action selector="confirmedOtherEmailButtonTapped:" destination="FZI-WL-nLp" eventType="touchUpInside" id="2Sa-lM-vkB"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="To read uber receipts, you will need to set your email in ubers account settings to pirate@stowaway.com" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="281" translatesAutoresizingMaskIntoConstraints="NO" id="JtQ-3V-xff">
-                                <rect key="frame" x="20" y="298" width="281" height="64"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="64" id="Ep0-xv-Awc"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't worry... you will also get uber receipts at pirate@yourdomain.com" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="281" translatesAutoresizingMaskIntoConstraints="NO" id="fj8-jl-bwF">
-                                <rect key="frame" x="22" y="508" width="281" height="40"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Don't worry... you will also get uber receipts at pirate@yourdomain.com" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="281" translatesAutoresizingMaskIntoConstraints="NO" id="fj8-jl-bwF">
+                                <rect key="frame" x="22" y="491" width="281" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="JQW-43-E1M"/>
@@ -184,6 +174,13 @@
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" text="To read uber receipts, you will need to set your email in ubers account settings to pirate@stowaway.com" translatesAutoresizingMaskIntoConstraints="NO" id="KM2-DT-2j7">
+                                <rect key="frame" x="18" y="293" width="282" height="103"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -194,7 +191,6 @@
                             <constraint firstItem="00E-pe-7If" firstAttribute="leading" secondItem="h2o-fV-4Ko" secondAttribute="leading" id="4aC-fe-2sj"/>
                             <constraint firstAttribute="trailing" secondItem="3Kr-F5-29m" secondAttribute="trailing" constant="19" id="BCF-zB-IGr"/>
                             <constraint firstItem="wKB-x6-bAU" firstAttribute="top" secondItem="qVg-oz-hBd" secondAttribute="top" constant="63" id="NQj-Wb-tID"/>
-                            <constraint firstItem="JtQ-3V-xff" firstAttribute="leading" secondItem="wKB-x6-bAU" secondAttribute="leading" id="P1o-sQ-VJt"/>
                             <constraint firstItem="wKB-x6-bAU" firstAttribute="leading" secondItem="qVg-oz-hBd" secondAttribute="leading" constant="20" symbolic="YES" id="Rje-Vi-cvT"/>
                             <constraint firstItem="00E-pe-7If" firstAttribute="leading" secondItem="qVg-oz-hBd" secondAttribute="leading" constant="46" id="WX2-Ur-yXB"/>
                             <constraint firstItem="00E-pe-7If" firstAttribute="trailing" secondItem="ldK-sc-fCc" secondAttribute="trailing" id="anG-E5-bB7"/>
@@ -205,7 +201,6 @@
                             <constraint firstItem="3Kr-F5-29m" firstAttribute="top" secondItem="wKB-x6-bAU" secondAttribute="bottom" constant="8" symbolic="YES" id="mYd-FZ-ujj"/>
                             <constraint firstItem="h2o-fV-4Ko" firstAttribute="top" secondItem="3Kr-F5-29m" secondAttribute="bottom" constant="65" id="oQA-xt-6Xj"/>
                             <constraint firstAttribute="trailing" secondItem="wKB-x6-bAU" secondAttribute="trailing" constant="20" symbolic="YES" id="oU7-fq-a0h"/>
-                            <constraint firstItem="ja2-5M-48S" firstAttribute="top" secondItem="JtQ-3V-xff" secondAttribute="bottom" constant="8" symbolic="YES" id="vH7-z4-dSI"/>
                             <constraint firstAttribute="trailing" secondItem="fj8-jl-bwF" secondAttribute="trailing" constant="17" id="yMi-Km-za6"/>
                             <constraint firstAttribute="trailing" secondItem="00E-pe-7If" secondAttribute="trailing" constant="61" id="zXW-mQ-pjo"/>
                             <constraint firstAttribute="bottom" secondItem="fj8-jl-bwF" secondAttribute="bottom" constant="20" symbolic="YES" id="zml-g2-Z6h"/>
@@ -217,13 +212,14 @@
                     <connections>
                         <outlet property="askMailProviderLabel" destination="jzU-wQ-GeV" id="MUx-mq-Pay"/>
                         <outlet property="authenticateWithGoogleButton" destination="00E-pe-7If" id="BcE-d8-2aF"/>
+                        <outlet property="changeUberEmailTextView" destination="KM2-DT-2j7" id="czp-gi-wlt"/>
                         <outlet property="emailTextField" destination="3Kr-F5-29m" id="A1a-1Y-mCY"/>
                         <outlet property="googleMailProviderButton" destination="h2o-fV-4Ko" id="LPz-Qj-mcI"/>
                         <outlet property="gotItButton" destination="ja2-5M-48S" id="koZ-JW-BNp"/>
                         <outlet property="nextBarButton" destination="WSa-bJ-nYR" id="Dt0-Zs-8T7"/>
                         <outlet property="otherMailProviderButton" destination="ldK-sc-fCc" id="0iP-pK-Kpc"/>
                         <outlet property="stowawayEmailFooterLabel" destination="fj8-jl-bwF" id="iih-JT-5cp"/>
-                        <outlet property="stowawayEmailUberChangeLabel" destination="JtQ-3V-xff" id="GGj-Gf-J3g"/>
+                        <segue destination="Gqh-qZ-Ggc" kind="push" identifier="go to payment" id="wbq-E7-Ekt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TaQ-Rj-YoD" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -479,7 +475,7 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="144" y="333" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="4DC82927-1924-45EA-9185-A2EADCD5667E" colorSpace="pattern"/>
+                                <color key="color" patternImage="5073088F-A75B-48FF-85D3-28CA99F0A515" colorSpace="pattern"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -631,6 +627,7 @@
         <!--Navigation Controller-->
         <scene sceneID="imo-7J-JSe">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="X8l-0v-Tum" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="yyB-R0-4Pt" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="4Wa-ms-fFv"/>
@@ -643,13 +640,12 @@
                         <segue destination="gzB-dY-rge" kind="relationship" relationship="rootViewController" id="a5K-jG-LZN"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="X8l-0v-Tum" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1343" y="-801"/>
         </scene>
     </scenes>
     <resources>
-        <image name="4DC82927-1924-45EA-9185-A2EADCD5667E" width="320" height="460">
+        <image name="5073088F-A75B-48FF-85D3-28CA99F0A515" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
