--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -475,7 +475,7 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="7XM-fk-vcd">
                                 <rect key="frame" x="144" y="333" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="CB17C517-B377-4313-8094-5718BDBE2741" colorSpace="pattern"/>
+                                <color key="color" patternImage="C90800E5-4088-40F9-8DA8-97B08ABCB208" colorSpace="pattern"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -612,7 +612,7 @@
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="U5Q-XR-sJo">
                                 <rect key="frame" x="142" y="30" width="37" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="color" patternImage="5532E61F-7E8D-4DE4-8F2B-8E58C41F5BB7" colorSpace="pattern"/>
+                                <color key="color" patternImage="9E631FAF-C7ED-43F5-A658-C3293C9CF7E4" colorSpace="pattern"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -634,15 +634,15 @@
             </objects>
             <point key="canvasLocation" x="2270" y="-798"/>
         </scene>
-        <!--View Controller - Meet Your Crew-->
+        <!--Meet Crew View Controller - Meet Your Crew-->
         <scene sceneID="uD3-8c-8Uz">
             <objects>
-                <viewController title="Meet Your Crew" id="adg-RW-m0r" sceneMemberID="viewController">
+                <viewController title="Meet Your Crew" id="adg-RW-m0r" customClass="MeetCrewViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="cao-yj-Z3c"/>
                         <viewControllerLayoutGuide type="bottom" id="GMx-o5-dNj"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Q4Z-iO-Ige">
+                    <view key="view" contentMode="scaleToFill" id="Q4Z-iO-Ige" customClass="Mee">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
@@ -681,7 +681,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="5532E61F-7E8D-4DE4-8F2B-8E58C41F5BB7" width="320" height="460">
+        <image name="9E631FAF-C7ED-43F5-A658-C3293C9CF7E4" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -10568,7 +10568,7 @@ CQq/AAkKxAAJCswACQrPAAkK1AAJCtwACQrfAAkK8QAJCvQACQr5AAAAAAAABAEAAAAAAAAAQgAAAAAA
 AAAAAAAAAAAJCvs
 </mutableData>
         </image>
-        <image name="CB17C517-B377-4313-8094-5718BDBE2741" width="320" height="460">
+        <image name="C90800E5-4088-40F9-8DA8-97B08ABCB208" width="320" height="460">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPj9YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQsLzI4O1UkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
